2001-08-25  Mikhael Goikhman  <migo@homemail.com>

	* libs/Strings.{c,h}:
	new function QuoteString() to add and escape single quotes to strings

	* fvwm/menus.c (MenuInteraction):
	quote both missing function name and menu name for
	MissingSubmenuFunction

	* fvwm/functions.c (expand):
	use QuoteString()

2001-08-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/style.c (CMD_Style): Fix up iconboxes using negative geom specs.

2001-08-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/cursor.c (CMD_CursorStyle):
	* fvwm/icons.c (GetXPMFile):
	* libs/Colorset.c (SetWindowBackground):
	-Wall fixes

	* libs/Bindings.c (AddBinding):
	tired to help with problem binding keys that have a keycode with no
	modifiers and another keycode with some modifiers pressed, e.g.
	kc 95 = F11, kc 67 = F1, kc 67 + shift = F11, which caused pressing
	F1 generating the actioon bound to F11 sometimes

	* fvwm/focus.c (focus_grab_buttons):
	-Wall fix

2001-08-23  Dan Espen  <dane@mk.telcordia.com>

	* libs/Bindings.c (MatchBinding): Unify XDisplayKeycodes avoidance.

2001-08-20  Bob Woodside  <proteus@pcnet.com>

	* fvwm/focus.c (MoveFocus, focus_grab_buttons): Fixed passive button
        grab synchronization so apps using XtTranslations to catch double-
        clicks don't get confused by extraneous Leave/EnterNotify events.
        This fixes the "xfm/moxfm don't see double-clicks" problem.

2001-08-20  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/icons.c (AutoPlaceIcon): Fix bug.

2001-08-19  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/icons.c (AutoPlaceIcon): Apply screen dimensions as icon is
	placed.

	* fvwm/style.c (CMD_Style): Don't apply screen dimensions to iconbox
	until later when the window is actually placed.

	* fvwm/fvwm.h (icon_boxes_struct):  Save  sign  for later  screen
 	position calculation.

2001-08-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (flush_window_updates):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/virtual.c (CMD_Xinerama):
