@@ -1,3 +1,9 @@
+2001-08-25  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/style.c (CMD_Style): 
+	* fvwm/fvwm.h (icon_boxes_struct): Add screen to iconbox struct when
+	using geometry spec.
+
 2001-08-25  Mikhael Goikhman  <migo@homemail.com>
 
 	* libs/Strings.{c,h}:
